# bifrost

./: .clang-format  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  meson.build  run.sh  setup.cfg  setup.py
data/: application.css  com.github.jmc-88.bifrost.appdata.xml  com.github.jmc-88.bifrost.desktop  com.github.jmc-88.bifrost.gresource.xml  meson.build
debian/: changelog  control  copyright  files  rules
scripts/: check-clang-format.sh
src/: main.cc  meson.build  tree_navigation.cc  tree_navigation.hh  views.cc  views.hh
src/bifrost/: __init__.py  __main__.py  bifrost.py  views.py  widgets.py
